--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,15 @@
 
 en:
   hello: "Hello world"
+  varieties: "Varieties"
+  gallery: "Gallery"
+  contact: "Contact"
+  welcome: "Welcome"
+  varieties_desc_1: "Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:"
+  varieties_desc_2: "Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br> Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein."
+  honey_akac: "Akazienhonig"
+  honey_hars: "Lindenhonig"
+  honey_repce: "Rapshonig"
+  honey_napraforgo: "Sonnenblumenhonig"
+  honey_erdei: "Waldhonig"
+  honey_vegyesvirag: "Blütenhonig"
