Create welcome page with flags and set up locale

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -20,16 +20,16 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
   varieties: "Varieties"
   gallery: "Gallery"
   contact: "Contact"
   welcome: "Welcome"
-  varieties_desc_1: "Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:"
-  varieties_desc_2: "Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen. <br> Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein."
-  honey_akac: "Akazienhonig"
-  honey_hars: "Lindenhonig"
-  honey_repce: "Rapshonig"
-  honey_napraforgo: "Sonnenblumenhonig"
-  honey_erdei: "Waldhonig"
-  honey_vegyesvirag: "Blütenhonig"
+  varieties_desc_1: "We sell high quality honey, directly from Hungarian producers in the following varieties:"
+  varieties_desc_2: "Combined with dried fruits and/or different nuts."
+  varieties_desc_3: "Nicely decorated, based on any special request as well."
+  honey_akac: "Acacia"
+  honey_hars: "Linden"
+  honey_repce: "Rapeseed"
+  honey_napraforgo: "Sunflower"
+  honey_erdei: "Wild honey"
+  honey_vegyesvirag: "Mixed blend"
