--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -1,8 +1,8 @@
-de:
-  varieties: "Sorten"
-  gallery: "Bilder"
+hu:
+  varieties: "Kinalatunk"
+  gallery: "Kepek"
   contact: "Kontakt"
-  welcome: "Willkommen"
+  welcome: "Udvozlunk"
   varieties_desc_1: "Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:"
   varieties_desc_2: "Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen."
   varieties_desc_2: "Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein."
