--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -1,14 +1,15 @@
 hu:
-  varieties: "Kinalatunk"
-  gallery: "Kepek"
-  contact: "Kontakt"
-  welcome: "Udvozlunk"
-  varieties_desc_1: "Wir verkaufen hochwertigen Honig direkt von ungarischen Produzenten in den folgenden Sorten:"
-  varieties_desc_2: "Wahlweise in Kombination mit getrockneten Früchten und / oder Nüssen."
-  varieties_desc_2: "Ansprechend verpackt, gerne gehen wir auch auf ihre besonderen Wünsche ein."
-  honey_akac: "Akazienhonig"
-  honey_hars: "Lindenhonig"
-  honey_repce: "Rapshonig"
-  honey_napraforgo: "Sonnenblumenhonig"
-  honey_erdei: "Waldhonig"
-  honey_vegyesvirag: "Blütenhonig"
+  title: "Bolbás Méz"
+  varieties: "Kínálatunk"
+  gallery: "Képek"
+  contact: "Kapcsolat"
+  welcome: "Üdvözlünk"
+  varieties_desc_1: "Magas minőségű termelői magyar mézet kínálunk eladásra a következő fajtákból:"
+  varieties_desc_2: "Kapható 500- 750- 1000 grammos kiszerelésben, illetve 100 grammosban szárított gyümölcsökkel és/ vagy magokkal kombinálva."
+  varieties_desc_3: "Díszcsomagolásban, akár egyedi igények alapján is."
+  honey_akac: "Akácméz"
+  honey_hars: "Hársméz"
+  honey_repce: "Repceméz"
+  honey_napraforgo: "Napraforgóméz"
+  honey_erdei: "Erdei méz"
+  honey_vegyesvirag: "Vegyes virágméz"
