Add Producer_infor to locales, and selyemfu

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -13,3 +13,6 @@ de:
   honey_napraforgo: "Sonnenblumenhonig"
   honey_erdei: "Waldhonig"
   honey_vegyesvirag: "Blütenhonig"
+  honey_selyemfu: ""
+  producer_info_1: ""
+  producer_info_2: ""
