--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,3 +34,6 @@ en:
   honey_napraforgo: "Sunflower honey"
   honey_erdei: "Wild honey"
   honey_vegyesvirag: "Mixed flower honey"
+  honey_selyemfu: ""
+  producer_info_1: ""
+  producer_info_2: ""
