--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -5,7 +5,7 @@ hu:
   contact: "Kapcsolat"
   welcome: "Üdvözlünk"
   varieties_desc_1: "Magas minőségű termelői magyar mézet kínálunk eladásra a következő fajtákból:"
-  varieties_desc_2: "Kapható 500- 750- 1000 grammos kiszerelésben, illetve 100 grammosban szárított gyümölcsökkel és/ vagy magokkal kombinálva."
+  varieties_desc_2: "Kapható 500- 750- 1000 grammos kiszerelésben, illetve 150 grammosban szárított gyümölcsökkel és/ vagy magokkal kombinálva."
   varieties_desc_3: "Díszcsomagolásban, akár egyedi igények alapján is."
   honey_akac: "Akácméz"
   honey_hars: "Hársméz"
@@ -13,3 +13,6 @@ hu:
   honey_napraforgo: "Napraforgóméz"
   honey_erdei: "Erdei méz"
   honey_vegyesvirag: "Vegyes virágméz"
+  honey_selyemfu: "Selyemfű méz"
+  producer_info_1: "Termelő: Bolbás Mihály"
+  producer_info_2: "Kistermelői engedély száma: 12-4-T 350"
